@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2012 THALES GLOBAL SERVICES.
+ * Copyright (c) 2012, 2019 THALES GLOBAL SERVICES.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -15,8 +15,7 @@ package org.eclipse.sirius.diagram.ui.business.api.image;
 import org.eclipse.sirius.viewpoint.BasicLabelStyle;
 
 /**
- * A interface use to select a image from a image source (workspace, CDO repo,
- * ...).
+ * A interface use to select a image from a image source (workspace, CDO repo, ...).
  * 
  * @author <a href="mailto:esteban.dugueperoux@obeo.fr">Esteban Dugueperoux</a>
  */
@@ -26,6 +25,7 @@ public interface ImageSelector {
      * The name of the CDOResource containing shared images at the top level of
      * the repo.
      */
+    @Deprecated
     String IMAGES_RESOURCE_NAME = "images"; //$NON-NLS-1$
 
     /**
